# logviewer

./: Cargo.toml  README.md  flake.nix
.zed/: settings.json
src/: app.rs  filter.rs  highlight.rs  main.rs  source.rs  state.rs  ui.rs
src/core/: filter_state.rs  input_state.rs  listen_state.rs  log_state.rs  mod.rs
src/gpui_app/: app.rs  input.rs  listen_popup.rs  log_list.rs  main_view.rs  mod.rs  model.rs  status_bar.rs  tests.rs  toolbar.rs
src/gui/: app.rs  mod.rs  state.rs
src/tui/: mod.rs
