[package]
name = "logviewer"
version = "0.11.0"
edition = "2021"
description = "A terminal-based log viewer"
repository = "https://github.com/SuperKenVery/tuilog"
license = "GPL-3.0-only"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
default = []
# gui = ["dioxus", "dioxus-native", "async-std", "async-channel"]

[dependencies]
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
regex = "1"
fancy-regex = "0.14"
notify = "7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["net"] }
socket2 = "0.5"
# dioxus = { version = "0.7.2", optional = true, features = ["desktop"] }
# dioxus-native = { version = "0.7", optional = true }
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", features = ["test-support"] }
gpui_macos = { git = "https://github.com/zed-industries/zed", package = "gpui_macos", features = ["runtime_shaders"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform" }
core-text = "=21.0.0"
async-channel = "2"
async-std = { version = "1.12", optional = true }
tracing = "0.1.44"
unicode-segmentation = "1.10"


[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
notify = { git = "https://github.com/zed-industries/notify.git", rev = "ce58c24cad542c28e04ced02e20325a4ec28a31d" }
notify-types = { git = "https://github.com/zed-industries/notify.git", rev = "ce58c24cad542c28e04ced02e20325a4ec28a31d" }
windows-capture = { git = "https://github.com/zed-industries/windows-capture.git", rev = "f0d6c1b6691db75461b732f6d5ff56eed002eeb9" }
calloop = { git = "https://github.com/zed-industries/calloop" }
